# HSdataClassificationTemplate

./: .gitignore  main.py  pyproject.toml
conf/: config.yaml
data/: data_prepro.py
models/: MLP_BatchNorm.py
