[tool.poetry]
name = "HSdataClassificationTmplate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
omegaconf = "^2.3.0"
torch = "^2.1.1"
torchvision = "^0.16.1"
hydra-core = "^1.3.2"
tqdm = "^4.66.1"
optuna = "^2.9.0"
hydra-optuna-sweeper = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
